--- a/notebook/02_logistic_map.ipynb
+++ b/notebook/02_logistic_map.ipynb
@@ -148,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x126c2e790>]"
+       "[<matplotlib.lines.Line2D at 0x13331e490>]"
       ]
      },
      "execution_count": 4,
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_mat_dfa_lorenz(x):\n",
+    "def test_mat_dfa(x):\n",
     "    x_dfa = fathon.DFA(fu.toAggregated(x))\n",
     "    n_w, F_w = x_dfa.computeFlucVec(scales, revSeg=False, polOrd=1)\n",
     "    idxs = get_idxs(n_w, scales)\n",
@@ -350,7 +350,7 @@
     }
    ],
    "source": [
-    "H,n_w,F_w = test_mat_dfa_lorenz(X)\n",
+    "H,n_w,F_w = test_mat_dfa(X)\n",
     "print(H)"
    ]
   },
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x126cdba10>"
+       "<matplotlib.collections.PathCollection at 0x1333ad8d0>"
       ]
      },
      "execution_count": 12,
@@ -425,17 +425,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "7546780a-f6b9-4f3a-95fc-d155defcf578",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x126e78990>]"
+       "[<matplotlib.lines.Line2D at 0x133471950>]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
